Fix line-wrap on tooltip

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ button.fold {
   left: 0;
   bottom: 0;
   z-index: 1;
+  white-space: pre-wrap;
+  word-break: break-all;
 }
 #findbox {
   display: none;
